--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,8 +7,8 @@
             <p class="nav navbar-brand">Mongo Scraper</p>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Saved Article</a></li>
-                <button type="button" class="btn btn-default navbar-btn">Scrape New Articles</button>
+                <li><a href="">Saved Article</a></li>
+                <button id="scrape" type="button" class="btn btn-default navbar-btn">Scrape New Articles</button>
             </ul>
         </div>
       </nav>
