--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,5 +15,7 @@
   </head>
   <body>
     {{{ body }}}
+
+    <script type="text/javascript" src="/assets/js/scrape.js"></script>
   </body>
 </html>
