scrape and now working on saved article

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -4,6 +4,6 @@
 
 <p>{{this.title}}</p>
 <a href="{{this.link}}"> {{this.link}}</a>
-<button id="{{this.save}}">Save</button>
+<button id="{{this._id}}" value="{{this.boolean}}" class="save">Save</button>
 {{/each}}
 </div>
