--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,14 +6,17 @@
         <div class="navbar-header ">
             <p class="nav navbar-brand">Mongo Scraper</p>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="/">Home</a></li>
                 <li><a href="">Saved Article</a></li>
-                <button id="scrape" type="button" class="btn btn-default navbar-btn">Scrape New Articles</button>
+                <button id="scrape" type="button" class="btn btn-default navbar-btn "data-toggle="modal" data-target="myModal">Scrape New Articles</button>
             </ul>
+           
+
+
+           
         </div>
       </nav>
-    
-    </div>
+
 
     <div class="row">
     
