still working on the saved button

--- a/views/partials/save.handlebars
+++ b/views/partials/save.handlebars
@@ -9,11 +9,7 @@
                 <li class="active"><a href="/">Home</a></li>
                 <li><a href="/articles/saved">Saved Article</a></li>
                 <button id="scrape" type="button" class="btn btn-default navbar-btn "data-toggle="modal" data-target="myModal">Scrape New Articles</button>
-            </ul>
-           
-
-
-           
+            </ul> 
         </div>
       </nav>
 
@@ -28,7 +24,7 @@
     </div>
     
     <div class="row">
-        {{>header}} 
+        {{>save-articles}} 
         
     </div>
 
