--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,9 +1,11 @@
 
 <div>
 {{#each article}}
-
+    {{#unless this.boolean}}
 <p>{{this.title}}</p>
 <a href="{{this.link}}"> {{this.link}}</a>
 <button id="{{this._id}}" value="{{this.boolean}}" class="save">Save</button>
+    {{/unless}}
 {{/each}}
+
 </div>
