still working on the say article

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -5,6 +5,8 @@
 <p>{{this.title}}</p>
 <a href="{{this.link}}"> {{this.link}}</a>
 <button id="{{this._id}}" value="{{this.boolean}}" class="save">Save</button>
+<button>Add Note</button>
+<button>Delete Note</button>
     {{/unless}}
 {{/each}}
 
